--- a/index.html
+++ b/index.html
@@ -35,51 +35,110 @@
       <section id="stay">
         <h2>Find the perfect vacation rental</h2>
         <!-- Create a form here -->
+        <form class="Vacation-form">
+            <div class="item">
+              <label for="location">Location:</label>
+              <input
+                id="destination"
+                type="text"
+                name="destination"
+                placeholder="Enter destination here"
+                required
+              />
+            </div>
+            <div class="item">
+              <label for="start">Start date:</label>
+              <input 
+                type="date" 
+                id="Arrive" 
+                name="trip-start"
+                value="2022-07-22"
+                min="2018-01-01" 
+                max="2025-12-31"
+            />
+            </div>
+            <div class="item">
+          <label for="end">End date:</label>
+            <input 
+            type="date" 
+            id="Depart" 
+            name="trip-start"
+            value="2022-07-22"
+            min="2018-01-01" 
+            max="2025-12-31"
+          />
+          </div>
+            <div class="item">
+              <label for="type">Type: </label>
+              <select name="types" id="types" size="1">
+                <option value="Apartment">Apartment</option>
+                <option value="Condo">Condo</option>
+                <option value="House">House</option>
+                <option value="Cardboard Box">Cardbard Box</option>
+              </select>
+            </div>
+              <div class="item">
+                <button type="search">Search</button>
+              </div>
+        </form>
       </section>
 
       <!-- About -->
       <section id="about" class="alternate-background">
         <h2>About</h2>
-
+          <div class="group">
+            <div class="item">
         <img
           src="images/vacation-rental-pool.png"
           alt="Thinkfulbnb - Vacation rental pool"
         />
-
+          </div>
+          <div class="item">
         <img
           src="images/vacation-rental-inside-stone.png"
           alt="Thinkfulbnb - Vacation rental inside stone"
         />
-
-        <p>
+          </div>
+        <p class="item-double">
           Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
           fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
           porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
           neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
           gravida neque.
         </p>
+        </div>
       </section>
 
       <!-- Ideas -->
       <section id="ideas">
         <h2>Ideas</h2>
+
+        <div class="grid-row">
+          
+          <div class="grid-column">
         <h3>Forest retreats</h3>
         <img
           src="images/forest-retreat.png"
-          alt="Thinkfulbnb - Forest retreat"
-        />
+          alt="Thinkfulbnb - Forest retreat"/>
         <h3>Beaches</h3>
         <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+          </div>
 
+          <div class="grid-column">
         <h3>Rustic cabins</h3>
         <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
-
         <h3>Pet-friendly</h3>
         <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+          </div>
+
+        </div>
+
       </section>
 
       <!-- Host -->
       <section id="host" class="alternate-background">
+        <div class="group">
+          <div class="item">
         <h2>Want to Become a Thinkfulbnb Host?</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
@@ -98,8 +157,13 @@
             hendrerit mauris.
           </li>
         </ul>
+        </div>
 
+        <div class="item">
         <img src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
+        </div>
+        </div>
+        
       </section>
     </main>
 
