--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <div class="logo">Thinkfulbnb</div>
       <nav>
         <ul id="menu">
-          <li><a>Stay</a></li>
-          <li><a>About</a></li>
-          <li><a>Ideas</a></li>
-          <li><a>Host</a></li>
+          <li><a href="#stay">Stay</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#ideas">Ideas</a></li>
+          <li><a href="#host">Host</a></li>
         </ul>
       </nav>
     </header>
@@ -72,8 +72,9 @@
               <label for="type">Type: </label>
               <select name="types" id="types" size="1">
                 <option value="Apartment">Apartment</option>
-                <option value="Condo">Condo</option>
-                <option value="House">House</option>
+                <option value="Barn">Barn</option>
+                <option value="Yacht">Yacht</option>
+                <option value="Castle">Castle</option>
                 <option value="Cardboard Box">Cardbard Box</option>
               </select>
             </div>
@@ -163,7 +164,7 @@
         <img src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
         </div>
         </div>
-        
+
       </section>
     </main>
 
